# fillit

./: CMakeLists.txt  Makefile  README.md  check.c  fillit.c  fillit.h  fillit_core.c  fillit_find_dot.c  ft_bzero2.c  ft_memalloc2.c  header.h  main.c  map_control.c  map_delete.c  map_generate.c  map_print.c  map_size.c  sample.fillit  save_line.c  t1  tetromino_delete.c  tetromino_set.c
inc/: header.h
libft/: ._Makefile  ._author  ._inc  ._obj  ._src  Makefile  libft.h
libft/inc/: ._libft.h
libft/src/: ._ft_atoi.c  ._ft_bzero.c  ._ft_count_words.c  ._ft_count_words_size.c  ._ft_isalnum.c  ._ft_isalpha.c  ._ft_isascii.c  ._ft_isblank.c  ._ft_isdigit.c  ._ft_isprint.c  ._ft_isspace.c  ._ft_itoa.c  ._ft_lstadd.c  ._ft_lstdel.c  ._ft_lstdelone.c  ._ft_lstiter.c  ._ft_lstmap.c  ._ft_lstnew.c  ._ft_memalloc.c  ._ft_memccpy.c  ._ft_memchr.c  ._ft_memcmp.c  ._ft_memcpy.c  ._ft_memdel.c  ._ft_memmove.c  ._ft_memset.c  ._ft_overlapn.c  ._ft_putchar.c  ._ft_putchar_fd.c  ._ft_putendl.c  ._ft_putendl_fd.c  ._ft_putnbr.c  ._ft_putnbr_fd.c  ._ft_putstr.c  ._ft_putstr_fd.c  ._ft_strcat.c  ._ft_strchr.c  ._ft_strclr.c  ._ft_strcmp.c  ._ft_strcpy.c  (+24 more)
src/: ._main.c  main.c
